SUBDIRS = src
man8_MANS = tcpick.8 tcpick_italian.8
EXTRA_DIST = INTERNALS INTERNALS INTERNALS.old KNOWN-BUGS tcpick.8 public_key.asc public_key_OLD.asc public_key_OLD.revoke public_key_message.txt PLATFORMS.compile PLATFORMS.running PLATFORMS.old EXAMPLES VERSION doc/*.html doc/*.texinfo Makefile.EDITME src/Makefile.EDITME src/config.h.EDITME autogen.sh README.it EXAMPLES.it tcpick_italian.8 INSTALL.it OPTIONS OPTIONS.it
nodist_DIST = NEWS
