bin_PROGRAMS = tcpick
tcpick_SOURCES = args.c display.c lookup_tree.c lookup_query.c loop.c tracker.c  tcpick.c  write.c datalink.c verify.c colors.c time.c timer.c timer.h debug.c fragments.c conn.h ip.h tcp.h udp.h tcpick.h flags.h fragment.h globals.h extern.h text.h colors.h def.h lookup.h quit.c msg.c
PACKS_AM_CFLAGS = -static -mcpu=i486
